<resources>
    <string name="app_name">EasyClean</string>
    <string name="username"><i>Username or E-mail ID</i></string>
    <string name="password"><i>Password</i></string>
    <string name="register"><u><b><i>Copyright</i></b></u></string>
    <string name="login_caps"><b>LOGIN</b></string>
    <string name="login_small"><b>Login</b></string>
    <string name="sign_up_caps"><b>SIGN UP</b></string>
    <string name="admin"><b>ADMIN</b></string>
    <string name="cleaner"><b>CLEANER</b></string>
    <string name="sign_up_small"><b>Sign Up</b></string>
    <string name="logo"><b>EasyClean</b></string>
    <string name="dev_info">IIIT Allahabad</string>
    <string name="sign_out">Sign Out</string>
    <string name="developed_by">Developed By</string>
    <string name="login">Login</string>
    <string name="menu">Menu</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="back">BACK</string>
    <string name="plus">+</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_email">Edit email</string>
    <string name="delete">DELETE</string>
    <string name="profile">Profile</string>
    <string name="user">USER</string>
    <string name="toilets">TOILETS</string>
    <string name="users">USERS</string>
    <string name="cleaners">CLEANERS</string>
    <string name="admins">ADMINS</string>
    <string name="TURBIDITY_THRESHOLD">50</string>

</resources>